Use % instead vh (safari on iOS bugly with vh)

--- a/app/assets/stylesheets/uploadcare/blocks/camera/camera__video.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/camera/camera__video.pcss
@@ -10,7 +10,7 @@
 
   @media (--mobile) and (orientation: landscape) {
     & {
-      height: calc(100vh - 200px);
+      height: calc(100% - 200px);
     }
   }
 
