--- a/app/assets/stylesheets/uploadcare/blocks/dialog/dialog.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/dialog/dialog.pcss
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   background: #fff;
 
