--- a/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__container.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__container.pcss
@@ -4,7 +4,7 @@
   position: relative;
 
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   overflow: hidden;
 
@@ -14,7 +14,7 @@
     & {
       width: calc(100% - 60px);
       max-width: 900px;
-      height: calc(100vh - 60px);
+      height: calc(100% - 60px);
       min-height: 500px;
       max-height: 660px;
 
