--- a/app/assets/stylesheets/uploadcare/blocks/page/page_dialog-opened.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/page/page_dialog-opened.pcss
@@ -1,3 +1,9 @@
 .page_dialog-opened {
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+  padding: 0;
+
   overflow: hidden;
 }
